frontend/k8s/gateway/acme-peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: acme
spec:
  mtls:
    mode: PERMISSIVE
